--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "@google/genai": "^1.15.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
